@@ -10,3 +10,10 @@ unreleased
 - widget now displays time input only if ``show_hm`` is set to ``True``
   (as does CalendarWidget)
   [2008/07/28 fRiSi]
+
+- locale for parsing the date in bda.indellidatetime.converter is obtained
+  from the site_property `default_language`
+  (widged was simply using 'de' before)
+  this might break your testcases since for a default plone site the english dateformat is
+  expected. you need to set the default language in your testsuite's `setUp` method to fix this.
+  [2008/09/12 fRiSi]
